# edge-ingress-security

./: .gitignore  .gitmodules  Cargo.toml  README.md  architecture.toml
file/: Cargo.toml
file/src/: lib.rs
file/src/api/: mod.rs
file/src/core/: mod.rs
file/src/gateway/: input.rs  mod.rs  output.rs
file/src/saf/: mod.rs
file/tests/: file_inbound_int_test.rs
gateway/: Cargo.toml  README.md
gateway/config/: architecture.toml
gateway/examples/: grpc_echo.rs  grpcs_echo.rs  http_echo.rs  https_echo.rs  https_echo_mtls.rs
gateway/src/: lib.rs  provider.rs  state.rs
gateway/src/api/: application_config_builder.rs  architecture_config_builder.rs  builder.rs  daemon.rs  health_check.rs  inbound_source.rs  ingress_error.rs  metrics.rs  mod.rs  pagination.rs  pipeline.rs  rate_limiter.rs  traits.rs
gateway/src/core/: mod.rs
gateway/src/saf/: builder.rs  mod.rs
gateway/tests/: builder_e2e_test.rs  local_file_int_test.rs  local_file_test.rs  passthrough_int_test.rs  passthrough_test.rs  validator_int_test.rs
grpc/: Cargo.toml  README.md  audit_output.txt
grpc-reflection/: Cargo.toml  README.md  struct.toml
grpc-reflection/config/: application.toml
grpc-reflection/docs/: threat_model.md
grpc-reflection/src/: lib.rs
grpc-reflection/src/api/: types.rs
grpc-reflection/src/core/: mod.rs  reflection_service.rs  wire.rs
grpc-reflection/tests/: reflection_int_test.rs
grpc/main/config/: architecture.toml
grpc/reflection/: Cargo.toml
grpc/reflection/tests/: reflection_int_test.rs
grpc/src/api/: mod.rs
grpc/src/core/: handler_dispatch.rs  mod.rs  peer_identity.rs  status_codes.rs
grpc/src/gateway/: input.rs  mod.rs  output.rs
grpc/src/saf/: mod.rs
grpc/tests/: grpc_authz_audit_int_test.rs  grpc_handler_adapter_int_test.rs  grpc_health_v1_int_test.rs  grpc_inbound_int_test.rs  grpc_message_size_int_test.rs  grpc_mtls_identity_int_test.rs  grpc_server_config_int_test.rs  tonic_grpc_server_int_test.rs  tonic_grpc_server_tls_int_test.rs
grpc/transport/: Cargo.toml
grpc/transport/tests/: grpc_authz_audit_int_test.rs  grpc_handler_adapter_int_test.rs  grpc_health_v1_int_test.rs  grpc_inbound_int_test.rs  grpc_message_size_int_test.rs  grpc_mtls_identity_int_test.rs  grpc_server_config_int_test.rs  tonic_grpc_server_int_test.rs  tonic_grpc_server_tls_int_test.rs
grpc/verifier/: Cargo.toml
grpc/verifier/src/: lib.rs
http/: Cargo.toml  README.md  deny.toml
http/main/config/: architecture.toml
http/src/: lib.rs
http/src/api/: mod.rs
http/src/core/: handler_dispatch.rs  mod.rs
http/src/gateway/: input.rs  mod.rs  output.rs
http/src/saf/: mod.rs
http/tests/: axum_server_int_test.rs
http/transport/: Cargo.toml
http/transport/tests/: axum_server_int_test.rs  axum_server_tls_int_test.rs  http_inbound_int_test.rs
http/verifier/: Cargo.toml
main/: Cargo.toml
main/config/: architecture.toml
main/scripts/ci/: build.sh  lint.sh
main/scripts/dev/: setup.sh
main/src/: provider.rs
main/src/api/: daemon.rs  health_check.rs  inbound_source.rs  ingress_error.rs  metrics.rs  middleware.rs  mod.rs  pagination.rs  pipeline.rs  rate_limiter.rs
main/src/gateway/: input.rs  mod.rs
main/src/saf/: mod.rs
main/tests/: builder_e2e_test.rs
message-broker/: Cargo.toml
message-broker/main/transport/: Cargo.toml  deny.toml
scm/: Cargo.toml
scm/docs/: README.md  architecture.md
scm/docs/adr/: ADR-001-ingress-security-specialisations.md  ADR-002-security-context-propagation.md
scm/http-verifier/: Cargo.toml  README.md
scm/http-verifier/tests/: axum_dep_int_test.rs  bearer_service_helper_int_test.rs  edge_domain_dep_int_test.rs  ingress_verifier_dep_int_test.rs  processor_int_test.rs  saf_verifier_e2e_int_test.rs  spi_security_int_test.rs
scm/message-consumer/: Cargo.toml
scm/message-consumer/tests/: application_config_builder_int_test.rs  broker_consumer_adapter_int_test.rs  broker_message_consumer_int_test.rs  broker_svc_int_test.rs  consumer_config_int_test.rs  consumer_handle_int_test.rs  consumer_int_test.rs  consumer_result_int_test.rs  default_message_consumer_int_test.rs  in_memory_message_consumer_int_test.rs  message_broker_dep_int_test.rs  message_consumer_handle_int_test.rs  message_consumer_svc_int_test.rs  nats_message_consumer_int_test.rs  saf_consumer_int_test.rs  validator_trait_int_test.rs
scm/scripts/hooks/: pre-commit
scm/tenant/: Cargo.toml  SECURITY.md
scm/tenant/examples/: tenant_resolver_setup.rs
scm/tenant/tests/: noop_tenant_resolver_int_test.rs  tenant_error_int_test.rs  tenant_id_int_test.rs  tenant_resolver_box_int_test.rs  tenant_resolver_config_int_test.rs  tenant_resolver_int_test.rs  tenant_svc_int_test.rs  validator_int_test.rs
scm/tls/: Cargo.toml
scm/tls/docs/: README.md
scm/tls/examples/: tls_setup.rs
scm/tls/tests/: acceptor_builder_int_test.rs  application_config_builder_int_test.rs  ingress_tls_config_int_test.rs  ingress_tls_error_int_test.rs  tls_acceptor_builder_int_test.rs  tls_svc_int_test.rs  validator_int_test.rs
scm/transport/: Cargo.toml
scm/transport/tests/: axum_http_server_helper_int_test.rs  axum_server_tls_int_test.rs  http_auth_int_test.rs  http_handler_adapter_int_test.rs  http_ingress_int_test.rs  http_ingress_result_int_test.rs  http_response_int_test.rs  http_server_error_int_test.rs  http_stream_int_test.rs  registry_dispatcher_impl_int_test.rs  spi_int_test.rs  swe_edge_ingress_verifier_int_test.rs  swe_observ_metrics_int_test.rs  (+2 more)
scm/verifier/: Cargo.toml  README.md
tls/: Cargo.toml  README.md
tls/src/: lib.rs
tls/tests/: application_config_builder_int_test.rs  noop_tls_extension_int_test.rs  tls_acceptor_builder_int_test.rs  tls_extension_int_test.rs  tls_svc_int_test.rs  traits_int_test.rs
verifier/: Cargo.toml  README.md
verifier/config/: architecture.toml
verifier/examples/: jwt_verify.rs
verifier/src/: lib.rs
verifier/tests/: api_key_subtle_int_test.rs  api_key_verifier_int_test.rs  application_config_builder_int_test.rs  jwt_verifier_int_test.rs  token_verifier_int_test.rs  validator_int_test.rs  verifier_svc_int_test.rs
(+1272 files in other folders)
