[workspace]
resolver = "2"
members  = ["tls", "verifier"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge-ingress"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used  = "deny"
expect_used  = "deny"

[workspace.dependencies]
edge-domain            = { git = "https://github.com/sweengineeringlabs/edge-domain.git", branch = "dev" }
swe-edge-configbuilder = { git = "https://github.com/sweengineeringlabs/edge-configbuilder.git", branch = "dev" }
swe-edge-ingress-tls      = { path = "tls" }
swe-edge-ingress-verifier = { path = "verifier" }
