[package]
name         = "swe-edge-ingress-file"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "swe-edge ingress — file inbound domain (value objects + FileInbound port + LocalFileSource)"
keywords     = ["file", "inbound", "edge", "swe"]
categories   = ["filesystem"]

[package.metadata.struct-engine]
application_type = "lib"

[lib]
path = "src/lib.rs"

[dependencies]
serde.workspace       = true
serde_json.workspace  = true
thiserror.workspace   = true
async-trait.workspace = true
futures.workspace     = true
chrono.workspace      = true
uuid.workspace        = true
walkdir.workspace     = true
mime_guess.workspace  = true

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[lints]
workspace = true
