[package]
name         = "swe-edge-ingress-gateway"
version      = "0.1.0"
edition      = "2021"
license      = "MIT"
rust-version = "1.75"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"
description  = "edge — L1 ingress gateway: inbound adapters (HTTP server, file read, gRPC server, queue consumer)."
keywords     = ["gateway", "ingress", "inbound", "sea", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "gateway"

[lib]
name = "swe_edge_ingress"
path = "src/lib.rs"

[features]
default = []

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2"
async-trait  = "0.1"
futures      = "0.3"
tokio        = { version = "1.0", features = ["rt", "sync", "fs", "io-util", "net"] }
parking_lot  = "0.12"
uuid         = { version = "1.0", features = ["v4"] }
chrono       = { version = "0.4", features = ["serde"] }
tracing      = "0.1"
base64       = "0.22"
toml         = "0.8"

swe_justobserv_context = { git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }
swe-observ-processes   = { package = "swe_justobserv_processes", git = "ssh://git@github.com/sweengineeringlabs/justobserv.git", tag = "v0.2.1" }

swe-edge-ingress-http = { package = "swe-edge-ingress-http-transport", git = "ssh://git@github.com/sweengineeringlabs/edge.git", branch = "dev" }
swe-edge-ingress-grpc = { package = "swe-edge-ingress-grpc-transport", git = "ssh://git@github.com/sweengineeringlabs/edge.git", branch = "dev" }
swe-edge-ingress-tls  = { path = "../tls" }
edge-domain           = { git = "ssh://git@github.com/sweengineeringlabs/edge.git", branch = "dev" }

[dev-dependencies]
tokio    = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "signal"] }
tempfile = "3"
rcgen    = "0.13"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"
