[workspace]
resolver = "2"
members  = ["main/features/*"]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[workspace.dependencies]
edge-domain               = { path = "../../domain/main/features/domain" }
swe-edge-configbuilder    = { path = "../../configbuilder/main/configbuilder" }
swe-edge-ingress-tls      = { path = "../../ingress/tls" }
swe-edge-ingress-verifier = { path = "../../ingress/verifier" }
