[workspace]
resolver = "2"
members  = [
    "main/features/transport",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"

[workspace.dependencies]
thiserror   = "2"
futures     = "0.3"
tokio       = { version = "1.0", features = ["rt", "sync"] }
tracing     = { version = "0.1", default-features = false }

swe-edge-message-broker = { path = "../../message-broker" }

[workspace.lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"
