[package]
name         = "swe-edge-ingress-tls"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "swe-edge ingress — server-side TLS and mTLS configuration for inbound servers"
keywords     = ["tls", "mtls", "ingress", "edge", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
serde.workspace     = true

tokio-rustls   = "0.26"
rustls         = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
rcgen    = "0.13"

[lints]
workspace = true
