[package]
name         = "swe-edge-ingress-tls"
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"
description  = "swe-edge ingress — server-side TLS and mTLS configuration for inbound servers"
keywords     = ["tls", "mtls", "ingress", "edge", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde     = { version = "1.0", features = ["derive"] }

tokio-rustls   = "0.26"
rustls         = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

[dev-dependencies]
tempfile = "3"
rcgen    = "0.13"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"
