[package]
name         = "swe-edge-ingress-tls"
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"
description  = "swe-edge ingress — server-side TLS and mTLS configuration for inbound servers"
keywords     = ["tls", "mtls", "ingress", "edge", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "tls"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = "2"
serde     = { version = "1.0", features = ["derive"] }

tokio-rustls           = "0.26"
rustls                 = { version = "0.23", features = ["ring"] }
rustls-pemfile         = "2"
swe-edge-configbuilder = { path = "../../configbuilder/main/features/configbuilder" }

[dev-dependencies]
tempfile = "3"
rcgen    = "0.13"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[[test]]
name = "ingress_tls_error_int_test"
path = "tests/ingress_tls_error_int_test.rs"

[[test]]
name = "tls_acceptor_builder_int_test"
path = "tests/tls_acceptor_builder_int_test.rs"

[[example]]
name = "tls_setup"
path = "examples/tls_setup.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[test]]
name = "ingress_tls_config_int_test"
path = "tests/ingress_tls_config_int_test.rs"

[[test]]
name = "tls_svc_int_test"
path = "tests/tls_svc_int_test.rs"

[[test]]
name = "noop_tls_extension_int_test"
path = "tests/noop_tls_extension_int_test.rs"

[[test]]
name = "tls_extension_int_test"
path = "tests/tls_extension_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"
