[package]
name         = "swe-edge-ingress-verifier"
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"
description  = "Protocol-agnostic inbound credential verification — JWT, API key, client cert."
keywords     = ["auth", "jwt", "verification", "inbound", "edge"]
categories   = ["authentication", "network-programming"]

[package.metadata.struct-engine]
application_type = "lib"

[lib]
path = "src/lib.rs"

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2"
tracing      = "0.1"
jsonwebtoken = "9"
subtle       = "2"
edge-domain = { path = "../../domain" }
swe-edge-configbuilder = { path = "../../configbuilder/main/features/configbuilder" }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"
