[package]
name         = "swe-edge-ingress-verifier"
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
rust-version = "1.95"
authors      = ["SWE Engineering Labs"]
repository   = "https://github.com/sweengineeringlabs/edge"
description  = "Protocol-agnostic inbound credential verification — JWT, API key, client cert."
keywords     = ["auth", "jwt", "verification", "inbound", "edge"]
categories   = ["authentication", "network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "verifier"

[lib]
path = "src/lib.rs"

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2"
tracing      = "0.1"
jsonwebtoken = "9"
subtle       = "2"
edge-domain = { workspace = true }
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
subtle = "2"
tokio = { version = "1.0", features = ["macros", "rt"] }

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[[example]]
name = "jwt_verify"
path = "examples/jwt_verify.rs"

[[test]]
name = "token_verifier_int_test"
path = "tests/token_verifier_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "verifier_svc_int_test"
path = "tests/verifier_svc_int_test.rs"

[[test]]
name = "api_key_subtle_int_test"
path = "tests/api_key_subtle_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"
