[package]
name         = "swe-edge-ingress-message-consumer"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true
authors.workspace     = true
repository.workspace  = true
description  = "edge — ingress message consumer: injection-only MessageConsumer port."
keywords     = ["message-broker", "pubsub", "ingress", "nats", "swe"]
categories   = ["network-programming", "asynchronous"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "transport"

[lib]
name = "swe_edge_ingress_message_consumer"
path = "main/src/lib.rs"

[dependencies]
thiserror                       = "2"
futures                         = "0.3"
tokio                           = { version = "1.52", features = ["rt-multi-thread", "rt", "sync", "macros", "time"] }
tracing                         = { version = "0.1", default-features = false }
# Contract: the MessageConsumer port speaks the broker vocabulary (Message,
# MessageStream, BrokerError) owned by edge-message-broker — always present.
swe-edge-message-broker         = { workspace = true }
serde                           = { version = "1.0", features = ["derive"] }
swe-edge-configbuilder          = { workspace = true }

[dev-dependencies]
tokio                   = { version = "1.52", features = ["rt-multi-thread", "macros", "time"] }
futures                 = "0.3"
swe-edge-configbuilder  = { workspace = true }
swe-edge-message-broker = { workspace = true }

[[example]]
name = "subscribe"
path = "examples/subscribe.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
