[package]
name                   = "swe-edge-ingress-tls"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "swe-edge ingress — server-side TLS and mTLS configuration for inbound servers"
keywords     = ["tls", "mtls", "ingress", "edge", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "tls"

[lib]
path = "main/src/lib.rs"

[dependencies]
thiserror = "2"
serde     = { version = "1.0", features = ["derive"] }

tokio-rustls           = "0.26"
rustls                 = { version = "0.23", features = ["ring"] }
rustls-pemfile         = "2"
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
tempfile       = "3"
rcgen          = "0.13"
tokio-rustls   = "0.26"
rustls         = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"

[[test]]
name = "traits_int_test"
path = "tests/traits_int_test.rs"

[[test]]
name = "ingress_tls_error_int_test"
path = "tests/ingress_tls_error_int_test.rs"

[[test]]
name = "tls_acceptor_builder_int_test"
path = "tests/tls_acceptor_builder_int_test.rs"

[[example]]
name = "tls_setup"
path = "examples/tls_setup.rs"

[lints]
workspace = true

[[test]]
name = "ingress_tls_config_int_test"
path = "tests/ingress_tls_config_int_test.rs"

[[test]]
name = "tls_svc_int_test"
path = "tests/tls_svc_int_test.rs"

[[test]]
name = "noop_tls_extension_int_test"
path = "tests/noop_tls_extension_int_test.rs"

[[test]]
name = "tls_extension_int_test"
path = "tests/tls_extension_int_test.rs"

[[test]]
name = "validator_int_test"
path = "tests/validator_int_test.rs"

[[test]]
name = "application_config_builder_int_test"
path = "tests/application_config_builder_int_test.rs"
