[package]
name                   = "swe-edge-ingress-tls"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "swe-edge ingress — server-side TLS and mTLS configuration for inbound servers"
keywords     = ["tls", "mtls", "ingress", "edge", "swe"]
categories   = ["network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "tls"

[lib]
path = "main/src/lib.rs"

[dependencies]
thiserror = "2"
serde     = { version = "1.0", features = ["derive"] }

tokio-rustls           = "0.26"
rustls                 = { version = "0.23", features = ["ring"] }
rustls-pki-types       = "1"
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
tempfile       = "3"
rcgen          = "0.13"
tokio-rustls     = "0.26"
rustls           = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"

[[example]]
name = "tls_setup"
path = "examples/tls_setup.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
