[package]
name                   = "swe-edge-ingress-verifier"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
authors.workspace      = true
repository.workspace   = true
description  = "Protocol-agnostic inbound credential verification — JWT, API key, client cert."
keywords     = ["auth", "jwt", "verification", "inbound", "edge"]
categories   = ["authentication", "network-programming"]

[package.metadata.struct-engine]
application_type = "lib"
service_type     = "verifier"

[lib]
path = "main/src/lib.rs"

[dependencies]
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
thiserror    = "2"
tracing      = "0.1"
jsonwebtoken = "9"
subtle       = "2"
edge-domain = { workspace = true }
swe-edge-configbuilder = { workspace = true }

[dev-dependencies]
subtle = "2"
tokio = { version = "1.0", features = ["macros", "rt"] }

[[example]]
name = "jwt_verify"
path = "examples/jwt_verify.rs"

[lints.rust]
unsafe_code  = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
